--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@clerk/nextjs": "^4.25.1",
     "@hello-pangea/dnd": "^16.3.0",
     "@hookform/resolvers": "^3.3.1",
+    "@mux/mux-node": "^7.3.2",
+    "@mux/mux-player-react": "^2.0.1",
     "@prisma/client": "^5.3.1",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
@@ -29,6 +32,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.2",
     "react-hot-toast": "^2.4.1",
+    "react-quill": "^2.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^5.7.0",
