--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.10.6",
     "@uploadthing/react": "^5.6.2",
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
@@ -29,6 +31,7 @@
     "lucide-react": "^0.279.0",
     "next": "latest",
     "react": "latest",
+    "react-confetti": "^6.1.0",
     "react-dom": "latest",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.2",
@@ -37,7 +40,8 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^5.7.0",
-    "zod": "^3.22.2"
+    "zod": "^3.22.2",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@types/node": "latest",
